// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generics can customize error messages 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Dude it needs to be a string",
    },
    "level": "error",
    "message": "Dude it needs to be a string",
    "path": Array [],
  },
]
`;

exports[`generics can customize info messages 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Dude it should probably be a string",
    },
    "level": "info",
    "message": "Dude it should probably be a string",
    "path": Array [],
  },
]
`;

exports[`generics can customize warning messages 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Dude it should probably be a string",
    },
    "level": "warning",
    "message": "Dude it should probably be a string",
    "path": Array [],
  },
]
`;

exports[`generics can demote errors to warnings 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Expected type \\"String\\", got \\"Number\\"",
    },
    "level": "warning",
    "message": "Expected type \\"String\\", got \\"Number\\"",
    "path": Array [],
  },
]
`;

exports[`generics can merge rules 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Must be at least 5 characters long",
    },
    "level": "error",
    "message": "Must be at least 5 characters long",
    "path": Array [],
  },
]
`;

exports[`generics returns arrays of errors/warnings by default 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Expected type \\"String\\", got \\"Number\\"",
    },
    "level": "error",
    "message": "Expected type \\"String\\", got \\"Number\\"",
    "path": Array [],
  },
]
`;
